@@ -2,6 +2,8 @@
 v6.2.2-git
 ----------
 
+[mms] Ensure that search/POP3 mailbox listings are saved even if there is an
+      issue with the underlying cache backend.
 [mms] Fix replying to non-UTF-8 messages when the 'reply_charset' preference
       is true.
 [jan] Fix vCard MIME viewer.
